src/monero_api.h


    typedef struct ErrorBox
    {
        int code;
        const char *message;
    } ErrorBox;

    bool is_needed_to_refresh(ErrorBox *error);

    void start_refresh(ErrorBox *error);

    void set_refresh_from_block_height(uint64_t height, ErrorBox *error);

    void rescan_blockchain(ErrorBox *error);

    void set_trusted_daemon(bool arg, ErrorBox *error);

    bool trusted_daemon(ErrorBox *error);

    uint64_t get_node_height(ErrorBox *error);

    bool is_new_transaction_exist(ErrorBox *error);

    uint64_t get_syncing_height(ErrorBox *error);

    uint64_t get_current_height(ErrorBox *error);


    void rescan_spent(ErrorBox *error);


    //uint64_t get_node_height_or_update(uint64_t base_eight);

    // **********************************************************************************************************************************
    // Account
    // **********************************************************************************************************************************

    // Get info
    int64_t *account_get_all(ErrorBox *error);

    int32_t account_size(ErrorBox *error);

    void free_block_of_accounts(int64_t *handles, int32_t size);


    int64_t *subaddress_get_all(ErrorBox *error);

    int32_t subaddress_size(ErrorBox *error);

    void free_block_of_subaddresses(int64_t *handles, int32_t size);


    const char *get_address(uint32_t account_index, uint32_t address_index, ErrorBox *error);


    uint64_t get_full_balance(uint32_t account_index, ErrorBox *error);

    uint64_t get_unlocked_balance(uint32_t account_index, ErrorBox *error);


    const char *get_subaddress_label(uint32_t account_index, uint32_t address_index, ErrorBox *error);


    // SetInfo
    void account_add_row(const char *label, ErrorBox *error);

    void account_set_label_row(uint32_t account_index, const char *label, ErrorBox *error);

    void subaddress_add_row(uint32_t account_index, const char *label, ErrorBox *error);

    void subaddress_set_label(uint32_t account_index, uint32_t address_index, const char *label, ErrorBox *error);


    // Refresh
    void account_refresh(ErrorBox *error);

    void subaddress_refresh(uint32_t account_index, ErrorBox *error);