lib/monero_api_bindings_generated.dart


  bool is_needed_to_refresh(
    ffi.Pointer<ErrorBox> error,
  ) {
    return _is_needed_to_refresh(
      error,
    );
  }

  late final _is_needed_to_refreshPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<ErrorBox>)>>(
          'is_needed_to_refresh');
  late final _is_needed_to_refresh = _is_needed_to_refreshPtr
      .asFunction<bool Function(ffi.Pointer<ErrorBox>)>();

  void start_refresh(
    ffi.Pointer<ErrorBox> error,
  ) {
    return _start_refresh(
      error,
    );
  }

  late final _start_refreshPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ErrorBox>)>>(
          'start_refresh');
  late final _start_refresh =
      _start_refreshPtr.asFunction<void Function(ffi.Pointer<ErrorBox>)>();

  void set_refresh_from_block_height(
    int height,
    ffi.Pointer<ErrorBox> error,
  ) {
    return _set_refresh_from_block_height(
      height,
      error,
    );
  }

  late final _set_refresh_from_block_heightPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Uint64,
              ffi.Pointer<ErrorBox>)>>('set_refresh_from_block_height');
  late final _set_refresh_from_block_height = _set_refresh_from_block_heightPtr
      .asFunction<void Function(int, ffi.Pointer<ErrorBox>)>();

  void rescan_blockchain(
    ffi.Pointer<ErrorBox> error,
  ) {
    return _rescan_blockchain(
      error,
    );
  }

  late final _rescan_blockchainPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ErrorBox>)>>(
          'rescan_blockchain');
  late final _rescan_blockchain =
      _rescan_blockchainPtr.asFunction<void Function(ffi.Pointer<ErrorBox>)>();

  void set_trusted_daemon(
    bool arg,
    ffi.Pointer<ErrorBox> error,
  ) {
    return _set_trusted_daemon(
      arg,
      error,
    );
  }

  late final _set_trusted_daemonPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Bool, ffi.Pointer<ErrorBox>)>>('set_trusted_daemon');
  late final _set_trusted_daemon = _set_trusted_daemonPtr
      .asFunction<void Function(bool, ffi.Pointer<ErrorBox>)>();

  bool trusted_daemon(
    ffi.Pointer<ErrorBox> error,
  ) {
    return _trusted_daemon(
      error,
    );
  }

  late final _trusted_daemonPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<ErrorBox>)>>(
          'trusted_daemon');
  late final _trusted_daemon =
      _trusted_daemonPtr.asFunction<bool Function(ffi.Pointer<ErrorBox>)>();

  int get_node_height(
    ffi.Pointer<ErrorBox> error,
  ) {
    return _get_node_height(
      error,
    );
  }

  late final _get_node_heightPtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function(ffi.Pointer<ErrorBox>)>>(
          'get_node_height');
  late final _get_node_height =
      _get_node_heightPtr.asFunction<int Function(ffi.Pointer<ErrorBox>)>();

  bool is_new_transaction_exist(
    ffi.Pointer<ErrorBox> error,
  ) {
    return _is_new_transaction_exist(
      error,
    );
  }

  late final _is_new_transaction_existPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<ErrorBox>)>>(
          'is_new_transaction_exist');
  late final _is_new_transaction_exist = _is_new_transaction_existPtr
      .asFunction<bool Function(ffi.Pointer<ErrorBox>)>();

  int get_syncing_height(
    ffi.Pointer<ErrorBox> error,
  ) {
    return _get_syncing_height(
      error,
    );
  }

  late final _get_syncing_heightPtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function(ffi.Pointer<ErrorBox>)>>(
          'get_syncing_height');
  late final _get_syncing_height =
      _get_syncing_heightPtr.asFunction<int Function(ffi.Pointer<ErrorBox>)>();

  int get_current_height(
    ffi.Pointer<ErrorBox> error,
  ) {
    return _get_current_height(
      error,
    );
  }

  late final _get_current_heightPtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function(ffi.Pointer<ErrorBox>)>>(
          'get_current_height');
  late final _get_current_height =
      _get_current_heightPtr.asFunction<int Function(ffi.Pointer<ErrorBox>)>();

  void rescan_spent(
    ffi.Pointer<ErrorBox> error,
  ) {
    return _rescan_spent(
      error,
    );
  }

  late final _rescan_spentPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ErrorBox>)>>(
          'rescan_spent');
  late final _rescan_spent =
      _rescan_spentPtr.asFunction<void Function(ffi.Pointer<ErrorBox>)>();

  /// Get info
  ffi.Pointer<ffi.Int64> account_get_all(
    ffi.Pointer<ErrorBox> error,
  ) {
    return _account_get_all(
      error,
    );
  }

  late final _account_get_allPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Int64> Function(
              ffi.Pointer<ErrorBox>)>>('account_get_all');
  late final _account_get_all = _account_get_allPtr
      .asFunction<ffi.Pointer<ffi.Int64> Function(ffi.Pointer<ErrorBox>)>();

  int account_size(
    ffi.Pointer<ErrorBox> error,
  ) {
    return _account_size(
      error,
    );
  }

  late final _account_sizePtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<ErrorBox>)>>(
          'account_size');
  late final _account_size =
      _account_sizePtr.asFunction<int Function(ffi.Pointer<ErrorBox>)>();

  void free_block_of_accounts(
    ffi.Pointer<ffi.Int64> handles,
    int size,
  ) {
    return _free_block_of_accounts(
      handles,
      size,
    );
  }

  late final _free_block_of_accountsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Int64>, ffi.Int32)>>('free_block_of_accounts');
  late final _free_block_of_accounts = _free_block_of_accountsPtr
      .asFunction<void Function(ffi.Pointer<ffi.Int64>, int)>();

  ffi.Pointer<ffi.Int64> subaddress_get_all(
    ffi.Pointer<ErrorBox> error,
  ) {
    return _subaddress_get_all(
      error,
    );
  }

  late final _subaddress_get_allPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Int64> Function(
              ffi.Pointer<ErrorBox>)>>('subaddress_get_all');
  late final _subaddress_get_all = _subaddress_get_allPtr
      .asFunction<ffi.Pointer<ffi.Int64> Function(ffi.Pointer<ErrorBox>)>();

  int subaddress_size(
    ffi.Pointer<ErrorBox> error,
  ) {
    return _subaddress_size(
      error,
    );
  }

  late final _subaddress_sizePtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<ErrorBox>)>>(
          'subaddress_size');
  late final _subaddress_size =
      _subaddress_sizePtr.asFunction<int Function(ffi.Pointer<ErrorBox>)>();

  void free_block_of_subaddresses(
    ffi.Pointer<ffi.Int64> handles,
    int size,
  ) {
    return _free_block_of_subaddresses(
      handles,
      size,
    );
  }

  late final _free_block_of_subaddressesPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Int64>,
              ffi.Int32)>>('free_block_of_subaddresses');
  late final _free_block_of_subaddresses = _free_block_of_subaddressesPtr
      .asFunction<void Function(ffi.Pointer<ffi.Int64>, int)>();

  ffi.Pointer<ffi.Char> get_address(
    int account_index,
    int address_index,
    ffi.Pointer<ErrorBox> error,
  ) {
    return _get_address(
      account_index,
      address_index,
      error,
    );
  }

  late final _get_addressPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Uint32, ffi.Uint32, ffi.Pointer<ErrorBox>)>>('get_address');
  late final _get_address = _get_addressPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(int, int, ffi.Pointer<ErrorBox>)>();

  int get_full_balance(
    int account_index,
    ffi.Pointer<ErrorBox> error,
  ) {
    return _get_full_balance(
      account_index,
      error,
    );
  }

  late final _get_full_balancePtr = _lookup<
      ffi.NativeFunction<
          ffi.Uint64 Function(
              ffi.Uint32, ffi.Pointer<ErrorBox>)>>('get_full_balance');
  late final _get_full_balance = _get_full_balancePtr
      .asFunction<int Function(int, ffi.Pointer<ErrorBox>)>();

  int get_unlocked_balance(
    int account_index,
    ffi.Pointer<ErrorBox> error,
  ) {
    return _get_unlocked_balance(
      account_index,
      error,
    );
  }

  late final _get_unlocked_balancePtr = _lookup<
      ffi.NativeFunction<
          ffi.Uint64 Function(
              ffi.Uint32, ffi.Pointer<ErrorBox>)>>('get_unlocked_balance');
  late final _get_unlocked_balance = _get_unlocked_balancePtr
      .asFunction<int Function(int, ffi.Pointer<ErrorBox>)>();

  ffi.Pointer<ffi.Char> get_subaddress_label(
    int account_index,
    int address_index,
    ffi.Pointer<ErrorBox> error,
  ) {
    return _get_subaddress_label(
      account_index,
      address_index,
      error,
    );
  }

  late final _get_subaddress_labelPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Uint32, ffi.Uint32,
              ffi.Pointer<ErrorBox>)>>('get_subaddress_label');
  late final _get_subaddress_label = _get_subaddress_labelPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(int, int, ffi.Pointer<ErrorBox>)>();

  /// SetInfo
  void account_add_row(
    ffi.Pointer<ffi.Char> label,
    ffi.Pointer<ErrorBox> error,
  ) {
    return _account_add_row(
      label,
      error,
    );
  }

  late final _account_add_rowPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ErrorBox>)>>('account_add_row');
  late final _account_add_row = _account_add_rowPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ErrorBox>)>();

  void account_set_label_row(
    int account_index,
    ffi.Pointer<ffi.Char> label,
    ffi.Pointer<ErrorBox> error,
  ) {
    return _account_set_label_row(
      account_index,
      label,
      error,
    );
  }

  late final _account_set_label_rowPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Uint32, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ErrorBox>)>>('account_set_label_row');
  late final _account_set_label_row = _account_set_label_rowPtr.asFunction<
      void Function(int, ffi.Pointer<ffi.Char>, ffi.Pointer<ErrorBox>)>();

  void subaddress_add_row(
    int account_index,
    ffi.Pointer<ffi.Char> label,
    ffi.Pointer<ErrorBox> error,
  ) {
    return _subaddress_add_row(
      account_index,
      label,
      error,
    );
  }

  late final _subaddress_add_rowPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Uint32, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ErrorBox>)>>('subaddress_add_row');
  late final _subaddress_add_row = _subaddress_add_rowPtr.asFunction<
      void Function(int, ffi.Pointer<ffi.Char>, ffi.Pointer<ErrorBox>)>();

  void subaddress_set_label(
    int account_index,
    int address_index,
    ffi.Pointer<ffi.Char> label,
    ffi.Pointer<ErrorBox> error,
  ) {
    return _subaddress_set_label(
      account_index,
      address_index,
      label,
      error,
    );
  }

  late final _subaddress_set_labelPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Uint32, ffi.Uint32, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ErrorBox>)>>('subaddress_set_label');
  late final _subaddress_set_label = _subaddress_set_labelPtr.asFunction<
      void Function(int, int, ffi.Pointer<ffi.Char>, ffi.Pointer<ErrorBox>)>();

  /// Refresh
  void account_refresh(
    ffi.Pointer<ErrorBox> error,
  ) {
    return _account_refresh(
      error,
    );
  }

  late final _account_refreshPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ErrorBox>)>>(
          'account_refresh');
  late final _account_refresh =
      _account_refreshPtr.asFunction<void Function(ffi.Pointer<ErrorBox>)>();

  void subaddress_refresh(
    int account_index,
    ffi.Pointer<ErrorBox> error,
  ) {
    return _subaddress_refresh(
      account_index,
      error,
    );
  }
